kubernetes/test-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: test-app
spec:
  ingressClassName: traefik
  rules:
    - host: hello.miak-it.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
